connexion_mongo.txt

c:\Python27>python.exe
Python 2.7 (r27:82525, Jul  4 2010, 09:01:59) [MSC v.1500 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import pymongo
>>> from pymogo import MongoClient()
  File "<stdin>", line 1
    from pymogo import MongoClient()
                                  ^
SyntaxError: invalid syntax
>>> from pymogo import MongoClient
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ImportError: No module named pymogo
>>> from pymongo import MongoClient
>>> client=MongoClient('192.168.1.20', 27017), u'test_rep_0')
  File "<stdin>", line 1
    client=MongoClient('192.168.1.20', 27017), u'test_rep_0')
                                                            ^
SyntaxError: invalid syntax
>>> client=MongoClient('192.168.1.20', 27017), u'test_rep_0'))
  File "<stdin>", line 1
    client=MongoClient('192.168.1.20', 27017), u'test_rep_0'))
                                                            ^
SyntaxError: invalid syntax
>>> client=MongoClient(('192.168.1.20', 27017), u'test_rep_0')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "c:\Python27\lib\site-packages\pymongo\mongo_client.py", line 229, in __init__
    raise TypeError("port must be an instance of int")
TypeError: port must be an instance of int
>>> client=MongoClient()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "c:\Python27\lib\site-packages\pymongo\mongo_client.py", line 352, in __init__
    raise ConnectionFailure(str(e))
pymongo.errors.ConnectionFailure: could not connect to localhost:27017: [Errno 10061] Aucune connexion nÆa pu Ûtre Útablie car lÆordinateur cible lÆa expre
ssÚment refusÚe
>>> client=pymongo.connection(('192.168.1.20', 27017), u'test_rep_0')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'module' object is not callable
>>> client=pymongo.Connection(('192.168.1.20', 27017), u'test_rep_0')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "c:\Python27\lib\site-packages\pymongo\connection.py", line 222, in __init__
    max_pool_size, document_class, tz_aware, _connect, **kwargs)
  File "c:\Python27\lib\site-packages\pymongo\mongo_client.py", line 229, in __init__
    raise TypeError("port must be an instance of int")
TypeError: port must be an instance of int
>>> client=pymongo.Connection((192.168.1.20 , 27017))
  File "<stdin>", line 1
    client=pymongo.Connection((192.168.1.20 , 27017))
                                       ^
SyntaxError: invalid syntax
>>> client=MongoClient('192.168.1.20')
>>> c = client.test_rep_0
>>> c.collextion_names()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "c:\Python27\lib\site-packages\pymongo\collection.py", line 1485, in __call__
    self.__name)
TypeError: 'Collection' object is not callable. If you meant to call the 'collextion_names' method on a 'Database' object it is failing because no such met
hod exists.
>>> c.collection_names()
[u'system.indexes', u'posts', u'test_collection', u'test_collection2', u'test3', u'test4', u'test5', u'test6']
>>>



>>> e = c.test6
>>> e.find({"name" : "KAWNEER"})
<pymongo.cursor.Cursor object at 0x02E02F90>
>>> e.find({"name" : "KAWNEER"})[0]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "c:\Python27\lib\site-packages\pymongo\cursor.py", line 540, in __getitem__
    raise IndexError("no such item for Cursor instance")
IndexError: no such item for Cursor instance
>>> e.find({"name" : "KAWNEER"})
<pymongo.cursor.Cursor object at 0x02E02FF0>
>>> f = e.find({"name" : "KAWNEER"})
>>> f[0]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "c:\Python27\lib\site-packages\pymongo\cursor.py", line 540, in __getitem__
    raise IndexError("no such item for Cursor instance")
IndexError: no such item for Cursor instance
>>> f = e.find()
>>> f
<pymongo.cursor.Cursor object at 0x02E02F50>
>>> f[0]
{u'fichier': False, u'extension': u'', u'nom': u'ALIXIO', u'taille': 15, u'parents': [u'Satellite MAC 2010'], u'date': datetime.datetime(2014, 3, 5, 14, 29
, 30), u'_id': ObjectId('533d7d3d6de0f9787e889215')}
>>> f = e.find({"name" : "INITIAL"})
>>> f[0]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "c:\Python27\lib\site-packages\pymongo\cursor.py", line 540, in __getitem__
    raise IndexError("no such item for Cursor instance")
IndexError: no such item for Cursor instance
>>> f = e.find({"name" : "VERANTIAL"})
>>> f[0]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "c:\Python27\lib\site-packages\pymongo\cursor.py", line 540, in __getitem__
    raise IndexError("no such item for Cursor instance")
IndexError: no such item for Cursor instance
>>> f = e.find({"nom" : "KAWNEER"})
>>> f[0]
{u'fichier': False, u'extension': u'', u'nom': u'KAWNEER', u'taille': 5, u'parents': [u'Satellite MAC 2010'], u'date': datetime.datetime(2011, 3, 25, 16, 5
3, 58), u'_id': ObjectId('533d7dcf6de0f9789a994d60')}
>>> f = e.find({"name" : "VERANTIAL"})
>>> f[0]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "c:\Python27\lib\site-packages\pymongo\cursor.py", line 540, in __getitem__
    raise IndexError("no such item for Cursor instance")
IndexError: no such item for Cursor instance
>>> f[0]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "c:\Python27\lib\site-packages\pymongo\cursor.py", line 540, in __getitem__
    raise IndexError("no such item for Cursor instance")
IndexError: no such item for Cursor instance
>>> f = e.find({"name" : "INITIAL"})
>>> f[0]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "c:\Python27\lib\site-packages\pymongo\cursor.py", line 540, in __getitem__
    raise IndexError("no such item for Cursor instance")
IndexError: no such item for Cursor instance
>>> e.find({"name" : "KAWNEER"})



















































